test/fixtures/errors/es-export-all/input.mjs
export * from './utils';
export * from 'lodash-es';
